[gd_scene load_steps=11 format=3 uid="uid://b3re5wmun74pi"]

[ext_resource type="Script" path="res://scripts/enemies/orange_snail.gd" id="1_xxnvk"]
[ext_resource type="Texture2D" uid="uid://g7gw3f4uombr" path="res://Orange snail ANIMATION.png" id="2_0hymj"]
[ext_resource type="Texture2D" uid="uid://bacdoo781nl6" path="res://assets/kenney_particle-pack/PNG (Transparent)/smoke_08.png" id="4_mv620"]

[sub_resource type="Animation" id="Animation_au8nv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qw61r"]
resource_name = "Spew"
length = 0.85
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qprft"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08gcr"]
_data = {
"RESET": SubResource("Animation_au8nv"),
"Spew": SubResource("Animation_qw61r"),
"default": SubResource("Animation_qprft")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8upm7"]
size = Vector2(53, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rt6e0"]
size = Vector2(70, 69)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_syqb2"]
particle_flag_disable_z = true
angle_max = 720.0
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.2
scale_over_velocity_max = 234.95
color = Color(1, 1, 0, 0.0705882)
hue_variation_min = 0.84
hue_variation_max = 1.0

[node name="OrangeSnail" type="Node2D"]
script = ExtResource("1_xxnvk")
poison_damage = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_08gcr")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_0hymj")
hframes = 3
vframes = 3
metadata/_aseprite_wizard_config_ = {
"i_mode": 0,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"player": "AnimationPlayer",
"slice": "",
"source": "C:/Users/yoris/Downloads/Orange snail ANIMATION.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "3d5ab24c0c6ccf1b9bb98c988b67f823"

[node name="TriggerArea" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/TriggerArea"]
position = Vector2(-2.5, 6.5)
shape = SubResource("RectangleShape2D_8upm7")

[node name="PoisonArea" type="Area2D" parent="Sprite2D"]
position = Vector2(0, -38)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/PoisonArea"]
position = Vector2(1, -7.5)
shape = SubResource("RectangleShape2D_rt6e0")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(1, -38)
process_material = SubResource("ParticleProcessMaterial_syqb2")
texture = ExtResource("4_mv620")
lifetime = 0.2
speed_scale = 0.5

[node name="PoisonDelay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Sprite2D/TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_entered" from="Sprite2D/TriggerArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite2D/TriggerArea" to="." method="_on_trigger_area_body_exited"]
[connection signal="body_exited" from="Sprite2D/TriggerArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Sprite2D/PoisonArea" to="." method="_on_poison_area_body_entered"]
[connection signal="body_exited" from="Sprite2D/PoisonArea" to="." method="_on_poison_area_body_exited"]
[connection signal="timeout" from="PoisonDelay" to="." method="_on_poison_delay_timeout"]
